2006-03-29  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c: (Closes N#19498)
	  - Add a callback for hardware events
	  - when told to lower our activity, put the applets in background
	    mode

2006-03-29  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Task Navigator and Status bar are accessible when Home
	is in Layout mode" (Closes N#23028)
	* hildon-home/layout-manager.c:
	  - Added dbus calls to statusbar and tasknav to dim/undim.
	* hildon-status-bar/hildon-status-bar-main.c :
	  - added to method rpc_cb the code to handle insensitivity dbus calls 
	  - added the methods that do the actual insensitivity
	* hildon-navigator/hildon-navigator-main.c:
	  - added functions to handle the sensitivity
	* hildon-navigator/hn-wm.c:
	  - modified listening functions to listen to new type of signals

2006-03-29  Guillem Jover  <guillem.jover@nokia.com>

	* hildon-navigator/application-switcher.c
	  (application_switcher_initialize_menu): Refactor toggle button signal
      connection into ...
	  (as_toggle_button_connect): ... here. New function.

2006-03-29  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/application-switcher.[ch]:
	  - Removed the blinking timeout as per new specifications
	  - Stop blinking when the screen is blanked

2006-03-29  Guillem Jover  <guillem.jover@nokia.com>

	* hildon-navigator/hildon-navigator-main.c (load_symbols): Make symbol
      a single pointer instead of an array of pointers. Change the if
      sentences to a switch block.

2006-03-29  Guillem Jover  <guillem.jover@nokia.com>

	* hildon-navigator/application-switcher.h
	  (BIG_BUTTON_HEIGHT): New macro.
	  (BUTTON_1_Y_POS, BUTTON_2_Y_POS, BUTTON_3_Y_POS, BUTTON_4_Y_POS):
	  Use macros instead of hardcoded values.

2006-03-28  Guillem Jover  <guillem.jover@nokia.com>

	* hildon-navigator/application-switcher.h
	(NAME_SMAL_MENU_BUTTON_ITEM): Renamed to ...
	(NAME_SMALL_MENU_BUTTON_ITEM): ... this. Fix all users.